# BYLW

./: .env.example  .gitignore  README.md  pkg_resources.py  pyproject.toml  requirements.txt  test_colqwen.py
.cursor/plans/: financebench-page-level-retrieval-qa_b1e57c9c.plan.md
config/: api.yaml  experiment.yaml  paths.yaml
scripts/: 01_prepare_data.py  02_build_pages.py  03_build_indices.py  03a_colqwen_encode_only.py  03b_colqwen_upsert_only.py  04_run_retrieval_experiments.py  05_run_qa_experiments.py  06_run_ablation_topk.py  07_run_typewise_analysis.py  08_select_cases.py  09_auto_label_qa_with_deepseek.py  10_compute_qa_metrics.py  11_label_ablation_and_compute_table_5_3.py
src/fbbench/: __init__.py  data_loading.py  gold_mapping.py  page_building.py
src/fbbench/analysis/: cases_selection.py  plots.py
src/fbbench/api_clients/: base_client.py  embedding_client.py  llm_client.py
src/fbbench/eval/: qa_metrics.py  retrieval_metrics.py
src/fbbench/index/: milvus_client.py
src/fbbench/qa/: prompting.py  qa_pipeline.py
src/fbbench/retrievers/: bge_retriever.py  bm25_retriever.py  colqwen_retriever.py  interfaces.py
src/fbbench/utils/: config_loader.py  io_utils.py  logging_utils.py  timer.py
src/financebench_page_level_retrieval_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
