[project]
name = "financebench-page-level-retrieval-qa"
version = "0.1.0"
description = "FinanceBench open-source 150 page-level retrieval + Qwen QA experiments (BM25, BGE, ColPali)."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Researcher", email = "example@example.com" }]

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "tqdm>=4.65.0",
  "httpx>=0.27.0",
  "rank-bm25>=0.2.2",
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
  "pyarrow>=14.0.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

